Making jumbotron size adjustments

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </header>
     <main role="main">
         <!-- Jumbotron -->
+        <!-- Adjust h4 header to eveything else including the buttons -->
         <section class="header ">
             <div class="jumbotron jumbotron-fluid d-flex flex-column justify-content-center  ">
                 <div class="jumbotron-img  mx-auto">
@@ -63,7 +64,7 @@
                 </div>
                 <div class="header-info mx-auto text-center ">
                     <h1>Jade Lopez</h1>
-                    <h3>Web Developer, Graphic Designer</h3>
+                    <h4>Full Stack Web Developer <br> &amp; <br> Web Designer</h4>
                 </div>
                 <div class="mx-auto " role="group" aria-label="Button Group">
                     <!-- Button Goes to Contact Form? -->
@@ -189,7 +190,8 @@
             <h1 class="text-center my-5 section-title">Portfolio</h1>
             <div class="section-margin">
                 <div class="container row mx-auto">
-                    <!-- 1. sleepmood -->
+                    <!-- 1. African Marketplace -->
+                    <!-- 2. sleepmood -->
                     <div class="col-md-4 col-sm-6">
                         <div class="card-container">
                             <div class="card flip-card">
@@ -233,7 +235,7 @@
                             </div><!-- Card Ends -->
                         </div><!-- Card-container ends-->
                     </div>
-                    <!-- 2. Rick & Morty  -->
+                    <!-- 3. Rick & Morty  -->
                     <div class="col-md-4 col-sm-6">
                         <div class="card-container">
                             <div class="card flip-card">
@@ -277,7 +279,7 @@
                             </div><!-- Card Ends -->
                         </div><!-- Card-container ends-->
                     </div>
-                    <!-- 3.  Wedding Gram -->
+                    <!-- 4.  Wedding Gram -->
                     <!-- Need to fix some of the site links -->
                     <div class="col-md-4 col-sm-6">
                         <div class="card-container">
@@ -324,7 +326,7 @@
                     </div>
                 </div>
                 <div class=" container row mt-4 mx-auto">
-                    <!--4. Bella Tea Room -->
+                    <!--5. Bella Tea Room -->
                     <div class="col-md-4 col-sm-6">
                         <div class="card-container">
                             <div class="card flip-card">
@@ -365,7 +367,7 @@
                             </div><!-- Card Ends -->
                         </div><!-- Card-container ends-->
                     </div>
-                    <!-- 5. 5150whips -->
+                    <!-- 6. 5150whips -->
                     <!-- Free domain is not working. Will need to change sites -->
                     <div class="col-md-4 col-sm-6">
                         <div class="card-container">
@@ -407,7 +409,7 @@
                             </div><!-- Card Ends -->
                         </div><!-- Card-container ends-->
                     </div>
-                    <!-- 6. Survey Form -->
+                    <!-- 7. Survey Form GET RID OF!!!!!!!! -->
                     <div class="col-md-4 col-sm-6">
                         <div class="card-container">
                             <div class="card flip-card">
