toning down card box-shadow on all cards.

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="section-margin">
                 <div class="container row  mx-auto">
                     <!-- 1. SafeMothers -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12 port">
                         <div class="card ">
                             <div class="hovereffect">
                                 <img class="card-img-top" src="images/safeMothers.png"
@@ -208,7 +208,7 @@
                         </div><!-- Card Ends -->
                     </div>
                     <!-- 2. African Marketplace -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12 port">
                         <div class="card ">
                             <div class="hovereffect">
                                 <img class="card-img-top" src="images/africanMarket.gif"
@@ -221,7 +221,7 @@
                         </div><!-- Card Ends -->
                     </div>
                     <!-- 3. sleepmood -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12 port">
                         <div class="card ">
                             <div class="hovereffect">
                                 <img class="card-img-top" src="images/sleepmood.png"
@@ -233,7 +233,7 @@
                         </div><!-- Card Ends -->
                     </div>
                     <!-- 4. Rick & Morty  -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12 port">
                         <div class="card ">
                             <div class="hovereffect">
                                 <img class="card-img-top" src="images/rickMorty.png"
@@ -246,7 +246,7 @@
                     </div>
                     <!-- 5.  Wedding Gram -->
                     <!-- Need to fix some of the site links -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12 port">
                         <div class="card ">
                             <div class="hovereffect">
                                 <img class="card-img-top" src="images/buildWeekOne.png"
@@ -258,7 +258,7 @@
                         </div><!-- Card Ends -->
                     </div>
                     <!--6. Bella Tea Room -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12 port">
                         <div class="card ">
                             <div class="hovereffect">
                                 <img class="card-img-top" src="images/landingPage.png"
@@ -271,7 +271,7 @@
                     </div>
                     <!-- 7. 5150whips -->
                     <!-- Free domain is not working. Will need to change hosting sites -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12 port">
                         <div class="card ">
                             <div class="hovereffect">
                                 <img class="card-img-top" src="images/5150whips.png" alt="5150Whips Landing Page picture">
