Finnished hover effect for portfolio section.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
         </section>
         <!-- Skills -->
-        <!-- Need to add node.js and any other backend work -->
+        <!-- Need to add node.js , python, and django -->
         <section class=" mb-5" id="skills">
             <h1 class="text-center my-5 section-title">Skills</h1>
             <div class="section-margin">
@@ -187,9 +187,10 @@
 
         </section>
         <!-- Portfolio -->
-        <!-- Change Pictures? logos with picture background? -->
+        <!-- CHANGE IMAGES!! ==> logos with picture backgrounds or website on laptop or phone -->
         <!-- Nasa project once we have data picker working -->
         <!-- Add works were you go above and beyond stretch -->
+        <!-- Create pages for each work and don't forget to add github and demo code with buttons -->
         <section class=" mb-5" id="portfolio">
             <h1 class="text-center my-5 section-title">Portfolio</h1>
             <div class="section-margin">
@@ -202,7 +203,7 @@
                                     alt="Safe Mothers Web app picture" ">
                                 <div class="overlay">
                                     <h4 class="text-center">Safe Mothers</h4>
-
+                                    <p class="btn-port text-center"><a href="#">Learn More</a href="#"></p>
                                 </div>
                             </div>
                         </div><!-- Card Ends -->
@@ -215,7 +216,7 @@
                                     alt="African Marketplace Log in page picture" ">
                                 <div class="overlay">
                                     <h4 class=" text-center">African Marketplace</h4>
-                                    <!-- Rather Empty?!?!? -->
+                                    <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div>
                         </div><!-- Card Ends -->
@@ -228,6 +229,7 @@
                                     alt="sleepmood app market page picture" ">
                                 <div class=" overlay">
                                     <h4 class=" text-center">sleepmood</h4>
+                                    <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div>
                         </div><!-- Card Ends -->
@@ -240,6 +242,7 @@
                                 alt="React App that uses a Rick and Morty API">
                                 <div class="overlay">
                                     <h4 class=" text-center">Rick & Morty Universe</h4>
+                                    <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div>
                         </div><!-- Card Ends -->
@@ -253,6 +256,7 @@
                                 alt="Wedding Gram marketing page picture" >
                                 <div class="overlay">
                                     <h4 class=" text-center">Wedding Gram</h4>
+                                    <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div> 
                         </div><!-- Card Ends -->
@@ -265,6 +269,7 @@
                                 alt="Free codecademy Landing page project">
                                 <div class="overlay">
                                     <h4 class=" text-center">Bella Tea Room</h4>
+                                    <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div>
                         </div><!-- Card Ends -->
@@ -277,6 +282,7 @@
                                 <img class="card-img-top" src="images/5150whips.png" alt="5150Whips Landing Page picture">
                                 <div class="overlay">
                                     <h4 class=" text-center">5150Whips</h4>
+                                    <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div>
                         </div><!-- Card Ends -->
