Added fonts. Still working on portfolio section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
     <script src="https://kit.fontawesome.com/de25aad685.js"></script>
     <!-- Index CSS -->
     <link rel="stylesheet" href="./css/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
-
+    <!-- Fonts: -->
+    <!-- Adobe: Setimo -->
+    <link rel="stylesheet" href="https://use.typekit.net/ehf7hxx.css">
+    <!-- Google: Rosario -->
+    <link href="https://fonts.googleapis.com/css?family=Rosario:400,500,600,700&display=swap" rel="stylesheet">
+    
+    
 </head>
 
 <body >
@@ -64,7 +69,7 @@
                     <img src="images/headshot.png" alt="Placeholder image" class="rounded-circle headshot">
                 </div>
                 <div class="header-info mx-auto text-center ">
-                    <h1>Jade Lopez</h1>
+                    <h1>J<span class="uppercase">ade</span> L<span class="uppercase">opez</span></h1>
                     <h4>Full Stack Web Developer <br> &amp; <br> Web Designer</h4>
                 </div>
                 <div class="mx-auto d-flex flex-row " role="group" aria-label="Button Group">
@@ -203,6 +208,7 @@
                                     alt="Safe Mothers Web app picture" ">
                                 <div class="overlay">
                                     <h4 class="text-center">Safe Mothers</h4>
+                                    <h6 class="text-center">Full Stack</h6>
                                     <p class="btn-port text-center"><a href="#">Learn More</a href="#"></p>
                                 </div>
                             </div>
@@ -216,6 +222,7 @@
                                     alt="African Marketplace Log in page picture" ">
                                 <div class="overlay">
                                     <h4 class=" text-center">African Marketplace</h4>
+                                    <h6 class="text-center">Back End</h6>
                                     <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div>
@@ -229,6 +236,7 @@
                                     alt="sleepmood app market page picture" ">
                                 <div class=" overlay">
                                     <h4 class=" text-center">sleepmood</h4>
+                                    <h6 class="text-center">Front End</h6>
                                     <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div>
@@ -242,6 +250,7 @@
                                 alt="React App that uses a Rick and Morty API">
                                 <div class="overlay">
                                     <h4 class=" text-center">Rick & Morty Universe</h4>
+                                    <h6 class="text-center">Front End</h6>
                                     <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div>
@@ -256,6 +265,7 @@
                                 alt="Wedding Gram marketing page picture" >
                                 <div class="overlay">
                                     <h4 class=" text-center">Wedding Gram</h4>
+                                    <h6 class="text-center">UI Developer</h6>
                                     <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div> 
@@ -269,6 +279,7 @@
                                 alt="Free codecademy Landing page project">
                                 <div class="overlay">
                                     <h4 class=" text-center">Bella Tea Room</h4>
+                                    <h6 class="text-center">Web Design</h6>
                                     <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div>
@@ -282,6 +293,7 @@
                                 <img class="card-img-top" src="images/5150whips.png" alt="5150Whips Landing Page picture">
                                 <div class="overlay">
                                     <h4 class=" text-center">5150Whips</h4>
+                                    <h6 class="text-center">Web Design</h6>
                                     <p class="btn-port text-center"><a href="#">Learn More</a></p>
                                 </div>
                             </div>
