--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                             </div>
                         </div><!-- Card Ends -->
                     </div>
-                    <!-- c. sleepmood -->
+                    <!-- d. Rick & Morty Modal -->
                     <div class="modal modal-rel fade" id="rickMorty" tabindex="-1" role="dialog" aria-labelledby="rickMortyLabel" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg" role="document">
                             <div class="modal-content">
@@ -525,11 +525,74 @@
                                 <div class="overlay">
                                     <h4 class=" text-center">Wedding Gram</h4>
                                     <h6 class="text-center">UI Developer</h6>
-                                    <p class="btn-port text-center"><a href="#">Learn More</a></p>
+                                    <button class="modalClick" type ="button" data-toggle="modal" data-target="#wedGram">Learn More</button>
                                 </div>
                             </div> 
                         </div><!-- Card Ends -->
                     </div>
+                    <!-- d. Wedding Gram Modal -->
+                    <div class="modal modal-rel fade" id="wedGram" tabindex="-1" role="dialog" aria-labelledby="rickMortyLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg" role="document">
+                            <div class="modal-content">
+                                <!-- Header -->
+                                <div class="modal-header">
+                                    <h4 class="modal-title" id="rickMortyLabel">Rick & Morty Universe</h4>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div> <!--End Header-->
+                                <!-- Body -->
+                                <div class="modal-body">
+                                    <div class="container-fluid modal-container">
+                                        <!-- Picture/video -->
+                                        <div class="row">
+                                            <div class="col-md-12 text-center ">
+                                                <img src="images/rickMorty.png" alt="">
+                                            </div> 
+                                        </div> <!-- End Video -->
+                                        <div class="row d-flex justify-content-center text">
+                                            <!-- Summary -->
+                                            <div class="col-md-7 mt-3 mb-3">
+                                                <h6 class="modal-heading mb-4">Using RESTful API's & Redux</h6>
+                                                <p>The application was created to demonstrate and practice using asynchronous action creators in Redux by returning data from an API of my choice. I chose to use the <a href="https://rickandmortyapi.com/" target="_blank" >Rick and Morty</a> API to create the Rick & Morty Universe app; which displays character, location, and episodic data from it. </p>
+                                            </div> <!--End Summary-->
+                                            <!-- Tech Stack -->
+                                            <div class="col-md-5 mt-3 mb-3 ">
+                                                <h6 class="text-center modal-heading mb-4">Tech Stack</h6>
+                                                <div class="row">
+                                                    <div class="col-md-6 no-pad">
+                                                        <ul class="tech-list">
+                                                            <li>React</li>
+                                                            <li>Redux</li>
+                                                            <li>Redux-thunk</li>
+                                                            <li>React-loader-spinner</li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="col-md-6 no-pad">
+                                                        <ul class="tech-list">
+                                                            <li>Axios</li>
+                                                            <li>Semantic-ui</li>
+                                                            <li>Styled Components</li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div> <!--End Tech Stack-->
+                                        </div>
+                                    </div><!--End modal-container-->
+                                </div> <!--End Body-->
+                                <!-- Footer -->
+                                <div class="modal-footer">
+                                    <a class="modal-btn mr-4" href="https://github.com/jadeli1720/React-Redux-App-2" target="blank">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a class="modal-btn mr-4" href="https://rickmortyuniverse.now.sh/" target="blank">
+                                        <i class="fas fa-external-link-square-alt"></i>
+                                    </a>
+                                </div> <!--End Footer-->
+                            </div> <!--End Modal Content-->
+                        </div>
+                    </div> <!--End Modal-->
+
                     <!--6. Bella Tea Room -->
                     <div class="col-md-4 col-sm-6 col-xs-12 port">
                         <div class="card ">
