Added resume and changed About text

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                 <div class="mx-auto d-flex flex-row " role="group" aria-label="Button Group">
                     <!-- Button Goes to Contact Form? -->
                     <div class="button-container">
-                        <a class="btn uppercase ">Hire Me</a>
+                        <a href="#contact" class="btn uppercase ">Hire Me</a>
                     </div>
                     <!-- Button needs to go to either separate page for resume or pdf most likely resume page -->
                     <div class="button-container">
-                        <a class="btn uppercase">Resume</a>
+                        <a href="./assests/jlopez_resume.pdf" target="_blank" class="btn uppercase">Resume</a>
                     </div>
                 </div>
             </div>
@@ -90,33 +90,17 @@
             <h1 class="text-center mb-5 section-title">About Me</h1>
             <div class="card container section-margin">
                 <div class="row">
-                    <div class="col-lg-7 px-4">
+                    <div class="col-lg-12 px-4">
                         <h2 class="card-title text-center mt-4">Hello!</h2>
                         <!-- NEED TO EDIT!!!!! Tell a story with interesting facts musical, dancing, random facts...personalize it! -->
                         <div class="card-body">
-                            <p>I am a Graphic/Web Designer currently studying Full Stack Web Development and <a
-                                    class="Lambda" href="https://lambdaschool.com/" target="_blank">Lambda School.</a> I
-                                love to meet new people, immerse myself into creatively charged atmospheres; and love to
-                                find design inspiration in the world around me. It is important to me to constantly push
-                                myself to learn new things and to help so that I may grow as a designer and an
-                                individual. </p>
-                        </div>
-
-                    </div>
-                    <div class="col-lg-5  ">
-                        <h2 class="card-title text-center mt-4">Basic Information</h2>
-                        <div class="row card-body d-flex justify-content-center">
-                            <!-- May need to adjust column size? -->
-                            <div class="col-lg-3 d-flex flex-column">
-                                <p>Email:</p>
-                                <p>Phone:</p>
-                                <p>Address:</p>
-                            </div>
-                            <div class="col-lg-7 d-flex flex-column">
-                                <p>jadeli1720@gmail.com</p>
-                                <p>(909) 379-4021</p>
-                                <p>3379 Reindeer Circle, Colorado Springs, CO 80922</p>
-                            </div>
+                            <p>Hello! I am a Graphic Designer/Web Developer who enjoys being immersed in a creatively
+                            charged atmosphere, and is passionate about design and learning new technologies. Currently, I am studying Full Stack Web Development at <a class="Lambda" href="https://lambdaschool.com/" target="_blank">Lambda School </a>, where I have gained experience with HTML, CSS, JavaScript, React.js, Node.js, Knex.js, and more. 
+                            
+                            </p>
+                            <p>These experiences, along with working 14 years in the customer service industry, have taught me creative problem-solving and effective communication skills as well as how to work in teams.  Personally, it is my goal to constantly push myself to learn new things so that I may grow as a designer, developer, and as an individual.
+                            </p>
+                            <p>Outside of web development, I love to do anything that engages my creative side. This includes anything from singing/playing/listening to music of all genres, cooking, and drawing. Other times I enjoy reading a good book or to travel here in Colorado or abroad.</p>
                         </div>
                     </div>
                 </div>
