debugging contact form

--- a/index.html
+++ b/index.html
@@ -1008,12 +1008,14 @@
                                     <input type="text" id="newName" name="newName" class="form-control form-control-lg"
                                         placeholder="Your name..." aria-placeholder="Your name..." required>
                                     <div class="valid-feedback">Looks good! Thanks.</div>
+                                    <div class="invalid-feedback">Opps! I need a name please. Try again.</div>
                                 </div>
                                 <div class="form-group col-md-12 bottom-margin ">
                                     <label for="newEmail">Email:</label>
                                     <input type="text" id="newEmail" name="newEmail" class="form-control form-control-lg"
                                         placeholder="example@email.com" aria-placeholder="example@email.com" required>
                                         <div class="valid-feedback">Looks good! Thanks. </div>
+                                        <div class="invalid-feedback">Opps! I need a email please. Try again.</div>
                                 </div>
                                 <div class="form-group col-md-12 bottom-margin ">
                                     <label for="newPhone">Phone:</label>
@@ -1026,6 +1028,7 @@
                                     placeholder="Your message..." aria-placeholder="Your message..." required>
                                     </textarea>
                                     <div class="valid-feedback">Looks good! Thanks. </div>
+                                    <div class="invalid-feedback">Opps! I need a message please. Try again.</div>
                                 </div>
                             </div>
                             <div class="button-container d-flex justify-content-center">
