maybe a netlify adjustment

--- a/index.html
+++ b/index.html
@@ -1001,7 +1001,7 @@
                     </div>
                     <!-- Need to center. May not need form-container -->
                     <div class="form-container ">
-                        <form class=" needs-validation inner-form" id="contactForm" name="profilecontactform" action="assests/email_send.php" method="POST" novalidate>
+                        <form class=" needs-validation inner-form" id="contactForm" name="contact" method="POST" data-netlify="true" novalidate>
                             <div class="form-row ">
                                 <div class="form-group col-md-12 bottom-margin ">
                                     <label for="newName">Name:</label>
