--- a/index.html
+++ b/index.html
@@ -1001,9 +1001,12 @@
                     </div>
                     <!-- Need to center. May not need form-container -->
                     <div class="form-container ">
-                        <form class=" needs-validation inner-form" id="contactForm" name="contact" method="POST" data-netlify="true" novalidate>
+                        <form class=" needs-validation inner-form" id="contactForm" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" data-netlify-recaptcha="true" novalidate>
                             <div class="form-row ">
                                 <div class="form-group col-md-12 bottom-margin ">
+                                    <!-- <p class="hidden">
+                                        <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+                                    </p> -->
                                     <label for="newName">Name:</label>
                                     <input type="text" id="newName" name="newName" class="form-control form-control-lg"
                                         placeholder="Your name..." aria-placeholder="Your name..." required>
@@ -1030,6 +1033,7 @@
                                     <div class="valid-feedback">Looks good! Thanks. </div>
                                     <div class="invalid-feedback">Opps! I need a message please. Try again.</div>
                                 </div>
+                                <div data-netlify-recaptcha="true"></div>
                             </div>
                             <div class="button-container d-flex justify-content-center">
                                 <button class="btn text-center" type="submit">Submit</button>
